Bug 500902 - Memo from 5.1.92 data not displaying in transaction reports
Summary: Memo from 5.1.92 data not displaying in transaction reports
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.1.92
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-01 13:43 UTC by Mark Medoff
Modified: 2025-04-08 16:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
attachment-149704-0.html (2.09 KB, text/html)
2025-03-02 10:55 UTC, Mark Medoff
Details
attachment-184698-0.html (1.90 KB, text/html)
2025-03-02 13:41 UTC, Mark Medoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Medoff 2025-03-01 13:43:53 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Memo field data entered in 5.1.92 do not display on reports. Data entered from Stable version of program still display correctly

STEPS TO REPRODUCE
1. Create file using older 5.1 program
2. Update file in 5.1.92 program
3. Run Transaction Report and display Memo field

OBSERVED RESULT
Memo field displays data correctly for old data
Memo field is blank for data entered in 5.1.92

EXPECTED RESULT
All memo fields should display

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Jack 2025-03-01 20:21:49 UTC
There is a memo field stored with the transaction itself, and also with each split.  I wonder if the difference is not because of a change in display, but a change in where the memo you enter it actually stored (or perhaps some combination.)  In 5.1.92, if you right click on a transaction, one of the options is "Show transaction details."  Please do this for one old and one new transaction, looking specifically which memo fields have values.  You can either describe any differences you find, or attach screen shots of the details pop-up for each.
Comment 2 Thomas Baumgart 2025-03-02 08:59:36 UTC
I could imagine that the memo is only assigned to one split using 5.1.92 and on both using 5.1 but wait until we receive the details from Mark. I think the difference of the memo field in the transaction object vs. the one in the split object is not related here. Nowadays, only the one in the split is used (AFAICT).
Comment 3 Mark Medoff 2025-03-02 10:55:50 UTC
Created attachment 179036 [details]
attachment-149704-0.html

It seems that there is a difference in how the memo field is stored in 
5.1.3 v 5.1.92:

When I enter a transaction with a memo in an account in *5.1.3*, the 
memo is stored in the split for *both* the account and the category.

In *5.1.92*. the memo is stored in the split for the account *only* and 
not in the second split for the category. Therefore, when I run a 
category report, the memo doesn't show on the report.

Mark

On 3/1/25 3:21 PM, Jack wrote:
> https://bugs.kde.org/show_bug.cgi?id=500902
>
> Jack<ostroffjh@users.sourceforge.net> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>               Status|REPORTED                    |NEEDSINFO
>           Resolution|---                         |WAITINGFORINFO
>
> --- Comment #1 from Jack<ostroffjh@users.sourceforge.net> ---
> There is a memo field stored with the transaction itself, and also with each
> split.  I wonder if the difference is not because of a change in display, but a
> change in where the memo you enter it actually stored (or perhaps some
> combination.)  In 5.1.92, if you right click on a transaction, one of the
> options is "Show transaction details."  Please do this for one old and one new
> transaction, looking specifically which memo fields have values.  You can
> either describe any differences you find, or attach screen shots of the details
> pop-up for each.
>
Comment 4 Mark Medoff 2025-03-02 13:41:55 UTC
Created attachment 179039 [details]
attachment-184698-0.html

It seems that there is a difference in how the memo field is stored in
5.1.3 v 5.1.92:

When I enter a transaction with a memo in an account in *5.1.3*, the memo
is stored in the split for *both* the account and the category.

In *5.1.92*. the memo is stored in the split for the account only andbut
not in the second split for the category. Therefore, when I run a category
report, the memo doesn't show on the report.
On 3/1/25 3:21 PM, Jack wrote:

https://bugs.kde.org/show_bug.cgi?id=500902

Jack <ostroffjh@users.sourceforge.net>
<ostroffjh@users.sourceforge.net> changed:

           What    |Removed                     |Added
----------------------------------------------------------------------------
             Status|REPORTED                    |NEEDSINFO
         Resolution|---                         |WAITINGFORINFO

--- Comment #1 from Jack <ostroffjh@users.sourceforge.net>
<ostroffjh@users.sourceforge.net> ---
There is a memo field stored with the transaction itself, and also with each
split.  I wonder if the difference is not because of a change in display, but a
change in where the memo you enter it actually stored (or perhaps some
combination.)  In 5.1.92, if you right click on a transaction, one of the
options is "Show transaction details."  Please do this for one old and one new
transaction, looking specifically which memo fields have values.  You can
either describe any differences you find, or attach screen shots of the details
pop-up for each.
Comment 5 Bug Janitor Service 2025-03-17 03:47:09 UTC
๐Ÿ›๐Ÿงน โš ๏ธ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Bug Janitor Service 2025-04-01 03:46:52 UTC
๐Ÿ›๐Ÿงน This bug has been in NEEDSINFO status with no change for at least 30 days. Closing as RESOLVED WORKSFORME.
Comment 7 Jack 2025-04-06 20:15:39 UTC
Mark - when you reply by email, please delete everything except your new comment, as the entire email becomes the next comment.  Also, please do not send HTML emails as they create unnecessary attachments for the HTML version of each message.

Changing status.  
Clearly the behavior has changed since 5.1.3, but I'm not sure whether there is anything which can easily be done now.  At some point, we will need to revisit the ability to change the memo field in a split other than the one being currently displayed in the Ledger.  Perhaps this can be left as a wishlist, with the eventual change still to be decided.

In the meantime, you can check the memo in each split using the Show Transaction Details feature, and then go to the ledger for the split you may want to change.  I've recently had to do this for many transactions when preparing several reports in preparation of filing my taxes, so I agree the current process needs some change, even if I am not sure exactly what.
Comment 8 Mark Medoff 2025-04-07 11:59:57 UTC
Thank you for the explanation.

When considering the wish list for modifying the memo behavior, please 
reconsider how these fields were handled with the Stable version:

In the Stable version, the memo was applied to both sides of the split 
transaction and modifying either of the splits would generate a dialog 
asking if you wanted to apply the same change to the other split.

This seems like ideal behavior.

Mark
Comment 9 Thomas Baumgart 2025-04-08 16:27:55 UTC
Git commit 4328584181dcf36367cc49b33960900b7e7b1a25 by Thomas Baumgart.
Committed on 08/04/2025 at 16:27.
Pushed by tbaumgart into branch 'master'.

Copy memo in unsplit transaction

This will bring back the functionality that is implemented in
previous releases of the project (5.1.x).
FIXED-IN: 5.2

M  +3    -0    kmymoney/mymoney/splitmodel.cpp
M  +33   -0    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/4328584181dcf36367cc49b33960900b7e7b1a25