Copy memo in unsplit transaction

This will bring back the functionality that is implemented in
previous releases of the project (5.1.x).

BUG: 500902
FIXED-IN: 5.2